2008-09-02  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Darin Adler.

        Fallback on invalid fill or stroke styles in Canvas was
        transparent black. Changed it to last valid style.

        Canvas fillStyle() and strokeStyle() needs fallback
        https://bugs.webkit.org/show_bug.cgi?id=20474

        Tests: fast/canvas/canvas-invalid-fillstyle.html
               fast/canvas/canvas-invalid-strokestyle.html

        * html/CanvasStyle.cpp:
        (WebCore::CanvasStyle::applyStrokeColor):
        (WebCore::CanvasStyle::applyFillColor):

2008-09-02  Dirk Schulze  <vbs85@gmx.de>

        Reviewed by Darin Adler.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=20474
        Tests behaviour on invalid fillStyle() or strokeStyle() in canvas.

        * fast/canvas/canvas-invalid-fillstyle-expected.txt: Added.
        * fast/canvas/canvas-invalid-fillstyle.html: Added.
        * fast/canvas/canvas-invalid-fillstyle.js: Added.
        * fast/canvas/canvas-invalid-strokestyle-expected.txt: Added.
        * fast/canvas/canvas-invalid-strokestyle.html: Added.
        * fast/canvas/canvas-invalid-strokestyle.js: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@36044 bbb929c8-8fbe-4397-9dbb-9b2b20218538